--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
   <nav>
     <a href="/">Home</a>
     <a href="/register">Register</a>
+    <a href="/view">View all registrations</a>
   </nav>
   <hr>
   {% with messages = get_flashed_messages() %}
