--- a/templates/register.html
+++ b/templates/register.html
@@ -5,6 +5,8 @@
   <p><input type="text" name="name" placeholder="Full name" required></p>
   <p><input type="text" name="country" placeholder="Country of origin" required></p>
   <p><input type="number" name="age" placeholder="Age" required></p>
+  <label for="date">Date of Birth: </label>
+  <p><input type="date" name="date" id="date" placeholder="DD/MM/YYYY"></p>
   <p><button type="submit">Submit</button></p>
 </form>
 {% endblock %}
