--- a/templates/view.html
+++ b/templates/view.html
@@ -7,12 +7,14 @@
       <th>Name</th>
       <th>Country</th>
       <th>Age</th>
+      <th>Date of Birth</th>
     </tr>
     {% for person in registrations %}
       <tr>
         <td>{{ person.name }}</td>
         <td>{{ person.country }}</td>
         <td>{{ person.age }}</td>
+        <td>{{ person.date }}</td>
       </tr>
     {% endfor %}
   </table>
